fix hero text stacking on mobile

--- a/app/_components/sections/Intro/intro.module.css
+++ b/app/_components/sections/Intro/intro.module.css
@@ -32,3 +32,13 @@
   color: transparent;
   font-weight: 800;
 }
+
+.break_mobile {
+  display: none;
+}
+
+@media screen and (max-width: 609px) {
+  .break_mobile {
+    display: block;
+  }
+}
